<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.comp.mypokedexapp.view.MainActivity">







    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_filters"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_filter"
                android:layout_gravity="end"
                android:paddingHorizontal="16dp"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:contentDescription="@string/button_filter" />

            <ImageButton
                android:id="@+id/Btn_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_sort"
                android:layout_gravity="end"
                android:paddingHorizontal="16dp"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:contentDescription="@string/button_sort" />

            <ImageButton
                android:id="@+id/btn_generations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_generation"
                android:layout_gravity="end"
                android:paddingHorizontal="16dp"
                style="@style/Widget.App.Button.OutlinedButton.IconOnly"
                android:contentDescription="@string/button_generations" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/pok_dex"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:textSize="20sp"
            android:text="@string/pesquisar_pokemon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <SearchView
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/searchview_background"
            android:iconifiedByDefault="false"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/Search"
            android:layout_marginTop="130dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPokemons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="200dp"
            tools:listitem="@layout/pokemon_item_old" />

    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="Aleatorizar"
        android:src="@drawable/ic_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
